css menu option width on small screen - quick fix

--- a/css/avionase.css
+++ b/css/avionase.css
@@ -804,6 +804,12 @@ span {
 
     }
 
+    .menu-option {
+
+        width: 100%;
+
+    }
+
 }
 
 @media(max-width: 380px) {
